# HHtools-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/routers/: design_storm.py  percent_capture.py  timeseries.py
backend/tests/: test_smoke.py
docs/: design-storm.html  index.html
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/pages/: DesignStorm.tsx  PercentCapture.tsx  TimeseriesExtract.tsx
src/hh_tools/: __init__.py  batch_runner.py  calibrate_model.py  compare_hydrographs.py  compare_outfiles.py  design_storm.py  download_rainfall.py  download_streamflow.py  event_extractor.py  extract_timeseries.py  flowdecomp.py  inp_diff.py  resample_timeseries.py  review_flow_data.py  sensitivity.py  summarize_outfiles.py  validate_inp.py
src/hh_tools/gui/: __init__.py  batch_runner_gui.py  calibrate_model_gui.py  compare_hydrographs_gui.py  compare_outfiles_gui.py  design_storm_gui.py  download_rainfall_gui.py  download_streamflow_gui.py  event_extractor_gui.py  extract_timeseries_gui.py  flow_decomp_gui.py  help_links.py  inp_diff_gui.py  master_launcher.py  plot_digitizer_gui.py  resample_timeseries_gui.py  review_flow_data_gui.py  sensitivity_gui.py  summarize_outfiles_gui.py  theme.py  validate_inp_gui.py
tests/: conftest.py  test_batch_runner.py  test_batch_runner_gui.py  test_calibrate_model.py  test_combine_across_files.py  test_compare_hydrographs.py  test_compare_hydrographs_gui.py  test_compare_outfiles.py  test_compare_outfiles_gui.py  test_design_storm.py  test_design_storm_gui.py  test_download_rainfall.py  test_download_rainfall_gui.py  test_download_streamflow.py  test_event_extractor.py  test_event_extractor_gui.py  test_extract_timeseries.py  test_extract_timeseries_gui.py  test_flowdecomp.py  test_resample_timeseries.py  test_resample_timeseries_gui.py  test_review_flow_data.py  test_sensitivity.py  test_summarize_outfiles.py  test_validate_inp.py  test_validate_inp_gui.py
